# Honours

./: README.md  index.html  settings.json
client/: package-lock.json  package.json
client/cypress/e2e/: unit.ts
client/src/pages/: Counter.tsx  Table.tsx  index.tsx
client/src/styles/: Home.module.css
client/wasm/: Cargo.toml
client/wasm/src/: bar.rs  foo.rs  graph.rs  lib.rs
client/wasm/src/core/: checker.rs
cypress/component/: Category.cy.ts  CompositionTable.cy.ts  Wasm.cy.ts  exampleModels.ts
src/: Category.ts  DiMultGraph.ts
src/pages/: Counter.tsx  Table.tsx  TableEditor.tsx  TableMorphSelect.tsx  globalTheme.tsx  index.tsx  theme.tsx  useCounter.tsx
src/pages/components/: TableMorphLabel.tsx
wasm/: Cargo.toml  README.md  examples.json
wasm/src/: lib.rs
wasm/src/checker/: _checker.rs  category.rs  checker.rs  checker_category.rs  errors.rs  graph.rs  mod.rs
wasm/src/core/: checker.rs  errors.rs  graph.rs  mod.rs
wasm/test/examples/: c1_s1.json  c3.json  c4_s1.json  c5_s1.json  interval.json  two_id_candidates.json
