[package]
name = "wasm"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
wasm-bindgen = { version = "0.2.83" }
gloo-utils = { version = "0.1", features = ["serde"] }
serde_json = "1.0.94"
